--- a/trunk/net.stickycode/sticky-coercion/pom.xml
+++ b/trunk/net.stickycode/sticky-coercion/pom.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-
-	Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved.
-
-	This program is licensed to you under the Apache License Version 2.0,
-	and you may not use this file except in compliance with the Apache License Version 2.0.
-	You may obtain a copy of the Apache License Version 2.0 at http://www.apache.org/licenses/LICENSE-2.0.
-
-	Unless required by applicable law or agreed to in writing,
-	software distributed under the Apache License Version 2.0 is distributed on an
-	"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-	See the Apache License Version 2.0 for the specific language governing permissions and limitations there under.
-
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.12</version>
+		<version>1.14</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -28,13 +18,19 @@
 
 	<name>sticky-coercion</name>
 	<description>A simple coercion library for converting strings to objects</description>
-
 	<inceptionYear>2009</inceptionYear>
+	<url>http://www.StickyCode.net/sticky-coercion/</url>
+
+	<scm>
+		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode/sticky-coercion</connection>
+		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode/sticky-coercion</developerConnection>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-unittest</artifactId>
-			<version>[1.4, 2)</version>
+			<version>[1.4,2)</version>
 			<scope>test</scope>
 		</dependency>
 
