--- a/trunk/net.stickycode.parent/sticky-root/pom.xml
+++ b/trunk/net.stickycode.parent/sticky-root/pom.xml
@@ -40,6 +40,7 @@
 	<scm>
 		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode.parent/sticky-root/</connection>
 		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode.parent/sticky-root/</developerConnection>
+		<url>http://code.google.com/p/stickycode/source/browse/#svn/trunk/net.stickycode.parent/sticky-root</url>
 	</scm>
 
 	<organization>
