--- a/trunk/net.stickycode/sticky-coercion/pom.xml
+++ b/trunk/net.stickycode/sticky-coercion/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.14</version>
+		<version>1.15</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -21,6 +21,7 @@
 	<scm>
 		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode/sticky-coercion</connection>
 		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode/sticky-coercion</developerConnection>
+		<url>http://code.google.com/p/stickycode/source/browse/#svn/trunk/net.stickycode/sticky-coercion</url>
 	</scm>
 
 	<dependencies>
