--- a/trunk/net.stickycode/sticky-stereotype/pom.xml
+++ b/trunk/net.stickycode/sticky-stereotype/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-api</artifactId>
-		<version>1.5</version>
+		<version>1.6</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -22,6 +22,7 @@
 	<scm>
 		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode/sticky-stereotype</connection>
 		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode/sticky-stereotype</developerConnection>
+		<url>http://code.google.com/p/stickycode/source/browse/#svn/trunk/net.stickycode/sticky-stereotype</url>
 	</scm>
 
 	<dependencies>
