--- a/trunk/net.stickycode.configured/sticky-configured/pom.xml
+++ b/trunk/net.stickycode.configured/sticky-configured/pom.xml
@@ -1,23 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-
-	Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved.
-
-	This program is licensed to you under the Apache License Version 2.0,
-	and you may not use this file except in compliance with the Apache License Version 2.0.
-	You may obtain a copy of the Apache License Version 2.0 at http://www.apache.org/licenses/LICENSE-2.0.
-
-	Unless required by applicable law or agreed to in writing,
-	software distributed under the Apache License Version 2.0 is distributed on an
-	"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-	See the Apache License Version 2.0 for the specific language governing permissions and limitations there under.
-
--->
+<!--	Copyright (c) 2010 RedEngine Ltd, http://www.redengine.co.nz. All rights reserved. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>net.stickycode.parent</groupId>
 		<artifactId>sticky-jar</artifactId>
-		<version>1.12</version>
+		<version>1.15</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -28,50 +15,49 @@
 
 	<name>sticky-configured</name>
 	<description>Taking the configuration out of applications, using the same principles that underly dependency injection</description>
-
 	<inceptionYear>2008</inceptionYear>
+	<url>http://www.StickyCode.net/configured/sticky-configured/</url>
+
+	<scm>
+		<connection>scm:svn:http://stickycode.googlecode.com/svn/trunk/net.stickycode.configured/sticky-configured</connection>
+		<developerConnection>scm:svn:https://stickycode.googlecode.com/svn/trunk/net.stickycode.configured/sticky-configured</developerConnection>
+		<url>http://code.google.com/p/stickycode/source/browse/#svn/trunk/net.stickycode.configured/sticky-configured</url>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-unittest</artifactId>
-			<version>[1,2)</version>
+			<version>[1.7,2)</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-exception</artifactId>
-			<version>[1,2)</version>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-coercion</artifactId>
-			<version>[2,3)</version>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-stereotype</artifactId>
-			<version>[1,2)</version>
-		</dependency>
-		<dependency>
-			<groupId>net.stickycode.composite</groupId>
-			<artifactId>sticky-composite-logging-api</artifactId>
-			<version>[1,2)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode.composite</groupId>
 			<artifactId>sticky-composite-logging-deploy</artifactId>
-			<version>[1,2)</version>
+			<version>[1.4,2)</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
-			<groupId>net.stickycode</groupId>
-			<artifactId>sticky-reflector</artifactId>
-			<version>[1.2,2)</version>
+			<groupId>net.stickycode.composite</groupId>
+			<artifactId>sticky-composite-logging-api</artifactId>
+			<version>[1.3,2)</version>
 		</dependency>
 		<dependency>
 			<groupId>net.stickycode.configured</groupId>
 			<artifactId>sticky-configured-api</artifactId>
 			<version>[2,3)</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.stickycode</groupId>
+			<artifactId>sticky-coercion</artifactId>
+			<version>[2.6,3)</version>
+		</dependency>
+		<dependency>
+			<groupId>net.stickycode</groupId>
+			<artifactId>sticky-reflector</artifactId>
+			<version>[1.5,2)</version>
 		</dependency>
 	</dependencies>
 </project>
